package interfaces;

public interface Operable {
    Operable sumar(Operable otro);
    String toString();
}
